--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,7 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+/ProyectoLaberinto/Library/PackageCache/com.unity.burst@1.8.12/.Runtime/*
+/ProyectoLaberinto/Library/PackageCache/com.unity.burst@1.8.12/.Runtime/libburst-llvm-16.dylib 
+/ProyectoLaberinto/Library/PackageCache/com.unity.burst@1.8.12/.Runtime/*.dll  
+/ProyectoLaberinto/Library/PackageCache/com.unity.burst@1.8.12/.Runtime/*.dylib  
